# Object_Oriented_C

./: CMakeLists.txt  Object.c  Object.h  Object_struct.h  Outcome_struct.h  Point.c  Point.h  Point_struct.h  any.c  points.c  test.c
examples/: Circle.c  Circle.h  Circle_struct.h  Outcome_struct.h  Point.c  Point.h  Point_struct.h  points.c
