cmake_minimum_required(VERSION 3.0.0)
project(draw LANGUAGES C VERSION 0.1.0)
set(CMAKE_C_STANDARD 99)
include(CTest)
enable_testing()
file(GLOB source "${PROJECT_SOURCE_DIR}/*.c" "${PROJECT_SOURCE_DIR}/*.h" "${PROJECT_SOURCE_DIR}/subclasses/*.c" "${PROJECT_SOURCE_DIR}/subclasses/*.h")
add_executable(draw ${source})

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
